[design] correct date character alignment

--- a/css/clock.css
+++ b/css/clock.css
@@ -25,6 +25,7 @@
 }
 
 .clock-separator {
+  justify-content: center;
   min-width: 0.5em;
   color: rgb(var(--accent));
 }
@@ -33,17 +34,18 @@
 .clock-minutes,
 .clock-seconds,
 .clock-meridiem {
+  justify-content: center;
   min-width: 1.25em;
 }
 
-.clock [class^="clock-"]:not(:first-child),
-.clock [class*=" clock-"]:not(:first-child) {
-  margin-left: 0.125em;
+.clock [class^="clock-"]:not(:first-child):not([class^="clock-separator"]),
+.clock [class*=" clock-"]:not(:first-child):not([class*=" clock-separator"]) {
+  margin-left: 0.2em;
 }
 
-.clock [class^="clock-"]:not(:last-child),
-.clock [class*=" clock-"]:not(:last-child) {
-  margin-right: 0.125em;
+.clock [class^="clock-"]:not(:last-child):not([class^="clock-separator"]),
+.clock [class*=" clock-"]:not(:last-child):not([class*=" clock-separator"]) {
+  margin-right: 0.2em;
 }
 
 .clock-hours {
