--- a/css/date.css
+++ b/css/date.css
@@ -25,6 +25,7 @@
 }
 
 .date-separator {
+  justify-content: center;
   min-width: 0.5em;
   color: rgb(var(--accent));
 }
@@ -33,17 +34,17 @@
 .date-day,
 .date-month,
 .date-year {
-  min-width: 1.25em;
+  justify-content: center;
 }
 
-.date [class^="date-"]:not(:first-child),
-.date [class*=" date-"]:not(:first-child) {
-  margin-left: 0.125em;
+.date [class^="date-"]:not(:first-child):not([class^="date-separator"]),
+.date [class*=" date-"]:not(:first-child):not([class*=" date-separator"]) {
+  margin-left: 0.2em;
 }
 
-.date [class^="date-"]:not(:last-child),
-.date [class*=" date-"]:not(:last-child) {
-  margin-right: 0.125em;
+.date [class^="date-"]:not(:last-child):not([class^="date-separator"]),
+.date [class*=" date-"]:not(:last-child):not([class*=" date-separator"]) {
+  margin-right: 0.2em;
 }
 
 .date-day {
